2014-05-16  Richard Frith-Macdonald <rfm@gnu.org>

	* EcAlarmDestination.m: Perform all connection operations in
	main thread (forwarding etc) and ensure that we run the
	current run loop while waiting for startup and shutdown.
	* EcLogger.m: Use floating point flush interval for modern
	systems which run faster and might want to flush more than
	once per second.
	* GNUmakefile: bump subminor version number for release
	Version 1.1.3 release

2014-05-14  Richard Frith-Macdonald <rfm@gnu.org>

	* EcAlerter.m: fix bug processing alert emails
	* GNUmakefile: bump subminor version number for release
	Version 1.1.2 release

2014-05-08  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.m: add memory commands 'class' and 'list' to record
	allocated instances of a specific class and list them... another
	memory debugging option.
	* GNUmakefile: bump subminor version number for release
	Version 1.1.1 release

2014-05-08  Richard Frith-Macdonald <rfm@gnu.org>

	* GNUmakefile: bump subminor version number for release
	Version 1.1.0: scripting and alarm improvements.

2014-04-27  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h:
	* EcProcess.m:
	Add +ecInitialDefaults to allow subclasses to easily set and
	modify default configuration values.

2014-03-28  Richard Frith-Macdonald <rfm@gnu.org>

	* EcTest.h:
	* EcTest.m:
	* EcProcess.m:
	* GNUmakefile:
	Add a few simple functions to connect to a process, set/get the
	config of a running process, and issue commands (and get back
	the response) so that regression test software can relatively
	easily exercie an entire system.

2014-03-26  Richard Frith-Macdonald <rfm@gnu.org>

	* EcControl.m: Add option to allow any user to log in.

2014-03-25  Richard Frith-Macdonald <rfm@gnu.org>

	* EcConsole.m: Don't read from stdin whn in non-interactive mode
	* EcProcess.m: Allow up to ten seconds to Contact Command server
	on startup.

2014-03-18  Richard Frith-Macdonald <rfm@gnu.org>

	* ECCL.h:
	* EcCommand.m:
	* EcConsole.m: